--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node -r tsconfig-paths/register .build/index",
+    "start": "TS_NODE_BASEURL=./build node -r tsconfig-paths/register build/index.js",
+    "lint": "eslint src/ --ext .ts",
+    "lint:fix": "eslint src/ --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "sequelize": "^6.33.0",
     "socket.io": "^4.7.2"
@@ -22,11 +25,16 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.49.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-airbnb": "^0.0.1-security",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-typescript": "^0.14.0"
+    "prettier": "^3.0.3",
+    "tsconfig-paths": "^4.2.0"
   }
 }
