--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "TS_NODE_BASEURL=./build node -r tsconfig-paths/register build/index.js",
-    "lint:fix": "eslint src/ --ext .ts --fix && eslint test/ --ext .ts --fix",
-    "test": "jest"
+    "start": "TS_NODE_BASEURL=./build/src node -r tsconfig-paths/register build/src/index.js",
+    "lint": "eslint src/ --ext .ts --fix && eslint test/ --ext .ts --fix",
+    "test": "jest ./build/test/"
   },
   "keywords": [],
   "author": "",
@@ -38,7 +38,6 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0"
   }
 }
