--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "sequelize": "^6.33.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "stripe": "^13.7.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -30,6 +31,7 @@
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/multer": "^1.4.7",
+    "@types/stripe": "^8.0.417",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.49.0",
